Added agent registration and job assignment